--- a/journal/201812.md
+++ b/journal/201812.md
@@ -109,54 +109,27 @@ Block 300,000 was mined in December and the mined DCR is now over 9,000,000. Con
 
 ## Mining
 
-Whatsminer D1 review was posted in Chinese [here](https://www.cybtc.com/forum.php?mod=viewthread&tid=41377&fromuid=6) ([Google translation](https://translate.google.com/translate?sl=auto&tl=en&hl=en&u=https%3A%2F%2Fwww.cybtc.com%2Fforum.php%3Fmod%3Dviewthread%26tid%3D41377%26fromuid%3D6)).
+Whatsminer D1:
 
-A guide to setup Whatsminer from Luxor https://medium.com/luxor/whatsminer-d1-decred-setup-guide-182eeccaed99
+* review was posted [in Chinese](https://www.cybtc.com/forum.php?mod=viewthread&tid=41377&fromuid=6) ([Google translation](https://translate.google.com/translate?sl=auto&tl=en&hl=en&u=https%3A%2F%2Fwww.cybtc.com%2Fforum.php%3Fmod%3Dviewthread%26tid%3D41377%26fromuid%3D6))
+* Luxor posted a [setup guide](https://medium.com/luxor/whatsminer-d1-decred-setup-guide-182eeccaed99)
+* Whatsminer.net [reported](https://twitter.com/whatsminer/status/1075810531838091265) to have shipped all batch 1 orders
+
+Bitmain's Antminer DR5 miner was [introduced](https://twitter.com/Antminer_main/status/1072435004142182400) on Twitter and met with some criticism. [Specs](https://www.asicminervalue.com/miners/bitmain/antminer-dr5-34th): 34 Th/s at 1,800 W, prices start [from $1,400](https://www.asicminervalue.com/miners/bitmain/antminer-dr5-34th).
 
 Be careful when ordering miners from eBay, you may get [just the weight](https://matrix.to/#/!NNzHoaSdnsbZDQOXJr:decred.org/$154491308943809bYuYs:decred.org).
 
-Whatsminer.net [reported](https://twitter.com/whatsminer/status/1075810531838091265) to have shipped all batch 1 orders of the D1.
-
-Bitmain's [Antminer DR5](https://twitter.com/Antminer_main/status/1072435004142182400) Decred miner was introduced and was met with immediate criticism from the Twitter community.
-
 ## Integrations
 
-{new items of infrastructure or updates from existing}
+The hardware wallet company Ledger announced that the long-awaited DCR integration is complete:
 
-Exchange integrations:
-
-* {is it legit? twitter is too young} https://twitter.com/HuobiRussia/status/1075424271537709058
-
-{OTC desks}
-
-{payment processors}
-
-{wallets}
-
-The hardware wallet company Ledger [tweeted](https://twitter.com/LedgerHQ/status/1072446149863329792) that the long-awaited DCR integration into their Ledger Nano S and Ledger Blue was complete.
-
-> We are excited to announce that the Ledger Nano S and Ledger Blue are now compatible with Decred. Decred is now available on Ledger Live and marks the first native Ledger Live integration since its launch. Read more here: https://www.ledger.fr/2018/12/11/ledger-nano-s-ledger-blue-and-ledger-live-now-support-decred-transactions/
+> We are excited to announce that the Ledger Nano S and Ledger Blue are now compatible with Decred. Decred is now available on Ledger Live and marks the first native Ledger Live integration since its launch. Read more [here](https://www.ledger.fr/2018/12/11/ledger-nano-s-ledger-blue-and-ledger-live-now-support-decred-transactions/) ([@LedgerHQ](https://twitter.com/LedgerHQ/status/1072446149863329792))
 
 DCR storage is possible through Ledger Live, an application that now acts as a one-stop-shop for accessing and interacting with your crypto assets since Ledger discontinued the use of their respective apps earlier this year.
-{explain:
 
-* what this means: "first native Ledger Live integration since its launch"
-* what is Ledger Live? is it a wallet? is it a web wallet? do users control keys?
-* does it share data with 3rd party servers?
-* is it open source?
-* is firmware open source?}
+Cobo Wallet [announced](https://twitter.com/cobo_wallet/status/1070805250376900609) a custodial staking service. Discussed [here](https://matrix.to/#/!kdpEDksmOMNrlMqffD:decred.org/$154413818735775gNTIq:decred.org).
 
-Cobo Wallet [announced](https://twitter.com/cobo_wallet/status/1070805250376900609) a custodial staking service. Please do your research to understand the implications like who controls the keys, whether you lose consensus and Politeia voting rights, and so on. Discussed [here](https://matrix.to/#/!kdpEDksmOMNrlMqffD:decred.org/$154413818735775gNTIq:decred.org){keep? dig whether the service controls keys and consensus/Pi voting rights}
-
-## Adoption
-
-New merchants:
-
-* {}
-
-{applications of Decred blockchain and related projects: Politeia, atomicswap}
-
-{investment adoption}
+For any wallet software and hardware, always do your research and ask how it works. Do you control the keys? Do you lose consensus and Politeia voting rights? Does it talk to Decred full nodes directly or through intermediaries? Does the service share your data with 3rd parties? Is the source code open and auditable?
 
 ## Outreach
 
