--- a/journal/201812.md
+++ b/journal/201812.md
@@ -155,30 +155,35 @@ Now a total of 5 well-known community members have the rights to tweet via @decr
 
 ## Events
 
-Attended:
-
-* {}
-
-Decred held it's first meetup in NYC on Wednesday, December 5th at Distributed Global in the flatiron district in NYC. The audience of about 80 people included VC's, developers from other projects, media, and members of the Decred community. Project Lead, Jake Yocom-Piatt, gave an Decred overview presentation, then delved into the technical details of the Politeia Proposal System including how it works and the potential breadth of its applications.
+Decred held it's first meetup in New York City on Dec 5 at Distributed Global in the flatiron district in NYC. The audience of about 80 people included VC's, developers from other projects, media, and members of the Decred community. @jy-p gave a Decred overview presentation ([photo](https://twitter.com/CryptoLeslie/status/1070769160878219266)), then delved into the technical details of the Politeia Proposal System including how it works and the potential breadth of its applications.
 
 Next, Chris Dannen, Founder of Iterative Capital, discussed the way work has evolved, particularly in the era of free open-source software. He explained how Decred's treasury brilliantly dovetails into a massive work trend that gives workers desired autonomy and enables them to do their best work.
 
-Finally, Chris Burniske and Joel Monegro of Placeholder VC help a fireside chat explaining Decred's value from the perspective of an institutional investor. Chris revealed the financial reasoning, including:
+Finally, Chris Burniske and Joel Monegro of Placeholder VC held a fireside chat explaining Decred's value from the perspective of an institutional investor. Chris revealed the financial reasoning, including:
 
-1. Team - btcsuite when released was as good as anything put out by BTC Core
+1. Team - btcsuite when released was as good as anything put out by Bitcoin Core
 2. Hybrid PoW/PoS system is more secure than any other network
 3. Treasury funding allows development to be funded long term
-4. Fork resistance-Decred is designed to keep the community together through consensus
+4. Fork resistance - Decred is designed to keep the community together through consensus
 
 Joel shared his appreciation for Decred's governance system, and its ability to make Decred polymorphic, adding features and functionality as the community decides. They concluded that Decred is built/designed for a multi-decade horizon. They shared some of the good work they're doing to on behalf of Decred with respect to custodianship, exchanges, and institutional staking, and concluded that the biggest issue currently facing Decred is liquidity.
 
-Founders Night took place Thursday, December 6th, and was Distributed Global's holiday party. They brought in all their GP's in from various offices, and invited their LP's, partners, and members of various projects within their portfolio. It was a great opportunity to meet those various constituencies and build relationships for future events in NYC. We're targeting the Spring for the next Decred event in NYC, looking forward to meeting more people and growing the community.
+Founders Night took place next day on Dec 6, and was Distributed Global's holiday party. They brought in all their fund managers from various offices, and invited their investors, partners, and members of various projects within their portfolio. It was a great opportunity to meet those various constituencies and build relationships for future events in NYC. We're targeting the Spring for the next Decred event in NYC, looking forward to meeting more people and growing the community.
+
+Other attended events:
+
+* Presentation in Technology University in Amozoc, Mexico. @elian talked to students about skills for the future and [noted](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15466174667748MPUAY:decred.org): "As part of my experience, I briefly talk about Decred as an innovative project in which digital skills become essential tools for collaboration. This was not a crypto meetup but rather a motivational talk for BA students to push them to acquire digital skills, this is a small university far outside big cities so this kind of content is very appreciated. As part of my experience in technology and digital industries, I share with them my experience working in an open source project like Decred as an example of the opportunities that arise from the internet industries. I think it was very interesting for them to realize that there is a massive economy flowing through the Internet with endless possibilities.". ([photo](https://twitter.com/Decred_MX/status/1071230180398641154))
+* [Introduction to Decred](https://cryptocanucks.com/events/an-introduction-to-decred-toronto/) in Toronto, Canada. @michae2xl and @zubairzia0 hosted the event and [noted](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$15464604416182ZLeNH:decred.org) that despite small attendance the people were looking to connect with a local Decred community and were excited to help to organize next event. ([photo](https://twitter.com/Decred_CA/status/1079191530362101760))
 
 Upcoming:
 
-* [10 lat Bitcoina](https://10latbitcoina.com.pl/) in Warsaw, Jan. 26th. @karamble will deliver a presentation at the conference celebrating the 10th anniversary of the Bitcoin whitepaper and Bitcoin itself.
+* [10 lat Bitcoina](https://10latbitcoina.com.pl/) in Warsaw, Poland on Jan 26. @karamble will deliver a presentation at the conference celebrating the 10th anniversary of the Bitcoin whitepaper and Bitcoin itself. Decred specifics are to be announced.
+* [TabConf](https://tabconf.com/) in Atlanta, USA on Feb 8-10. @moo31337 will present "Decred 101: An introduction to Decred" on Feb 9.
+* [The North American Bitcoin Conference](https://btcmiami.com/) in Miami, USA on Jan 16-18. @jy-p will present Politeia and explore a wide variety of applications that could utilize it. Please message @Dustorf if you're interested to help working the show.
+* [Campus Party](http://brasil.campus-party.org/cpbr12/patrocinadores/) in Sao Paulo, Brazil on Feb 12-17. Decred will have speakers and an exclusive area for hackathons.
+* [Jalisco Talent Land](https://www.talent-land.mx/#entradas) in Guadalajara, Mexico on Apr 22-26. Decred will have a booth. @elian will present an overview of Decred with Q&A, plus there will be walkthroughs how to use software and vote. Contact @elian if you're interested in helping/attending.
 
-{announcements from events people}
+Ask in [#event_planning](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org) room for any questions.
 
 ## Media
 
