--- a/journal/201812.md
+++ b/journal/201812.md
@@ -187,38 +187,33 @@ Ask in [#event_planning](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org) roo
 
 ## Media
 
-{community efforts: Decred Assembly, websites, etc}
+Selected articles:
 
-{ratings news}
-
-Articles:
-
-* https://blog.bbod.io/decred-dcr-fundamental-analysis/ {good? accurate?} (also [in Chinese](https://www.weibo.com/ttarticle/p/show?id=2309404313596447316959) and [Japanese](https://cointyo.jp/article/10005567))
-* https://medium.com/decred/detailed-analysis-of-decred-fork-resistance-93022e0bcde7
-* https://cryptobriefing.com/bitcoin-miners-silent-price-falls/ (also [in Chinese](https://www.jinse.com/bitcoin/288904.html))
-* https://nulltx.com/decred-co-founder-pronounces-2018-as-the-death-of-the-ico-model/
-* https://coinrivet.com/the-practical-cypherpunk-marco-peereboom-of-decred/
-* https://www.ccn.com/2018-in-4-words-icos-and-ethereum-are-dead/
-* https://51pct.io/decred-governance-and-funding-reimagined/ (part is behind a paywall)
-* https://medium.com/@richardred/working-for-the-decred-dae-a9cfb17686fa
-
-Above are most interesting articles, but more were published on the web. The [decred-media-tracker](https://github.com/RichardRed0x/decred-media-tracker) project is intended to track all articles.
+* Bitcoin Miners Go Silent As Price Falls ([cryptobriefing.com](https://cryptobriefing.com/bitcoin-miners-silent-price-falls/), also [in Chinese](https://www.jinse.com/bitcoin/288904.html))
+* Detailed analysis of Decred fork resistance by @Haon ([medium](https://medium.com/decred/detailed-analysis-of-decred-fork-resistance-93022e0bcde7))
+* Fundamental Pick: Decred by BBOD Research ([blog.bbod.io](https://blog.bbod.io/decred-dcr-fundamental-analysis/), also [in Chinese](https://www.weibo.com/ttarticle/p/show?id=2309404313596447316959) and [Japanese](https://cointyo.jp/article/10005567))
+* Decred Co-founder Pronounces 2018 as the "Death of the ICO Model" ([nulltx.com](https://nulltx.com/decred-co-founder-pronounces-2018-as-the-death-of-the-ico-model/))
+* 2018 in 4 Words - ICOs and Ethereum Died ([ccn.com](https://www.ccn.com/2018-in-4-words-icos-and-ethereum-are-dead/))
+* The practical cypherpunk: Marco Peereboom of Decred ([coinrivet.com](https://coinrivet.com/the-practical-cypherpunk-marco-peereboom-of-decred/))
+* Decred: Governance and Funding Reimagined ([51pct.io](https://51pct.io/decred-governance-and-funding-reimagined/))
+* Working for the Decred DAE by @richardred ([medium](https://medium.com/@richardred/working-for-the-decred-dae-a9cfb17686fa))
 
 Translations:
 
-* Decred Journal - November 2018 [in Spanish](https://medium.com/@decred_es/bolet%C3%ADn-mensual-decred-noviembre-2018-52168692e624) by @elian, [in Polish](https://github.com/artikozel/DecredJournalPL/blob/master/journal/201811_DecredJournalPL.md) by @kozel and [in Russian](https://medium.com/decred-russia/decred-journal-%D0%BD%D0%BE%D1%8F%D0%B1%D1%80%D1%8C-2018-d0aceacfd72a) by @DZ. November issue was the biggest so far (59 KiB), thank you for the epic translation effort!
-* You can find all translations of Decred Journal on the [home page](https://xaur.github.io/decred-news/)
+* Decred Journal - November 2018 [in Spanish](https://medium.com/@decred_es/bolet%C3%ADn-mensual-decred-noviembre-2018-52168692e624) by @elian, [in Polish](https://github.com/artikozel/DecredJournalPL/blob/master/journal/201811_DecredJournalPL.md) by @kozel and [in Russian](https://medium.com/decred-russia/decred-journal-%D0%BD%D0%BE%D1%8F%D0%B1%D1%80%D1%8C-2018-d0aceacfd72a) by @DZ, [in Chinese](https://medium.com/@guang.dcr/decred%E6%9C%88%E6%8A%A5-11%E6%9C%88-1ddac6598830) by @guang. November issue was the biggest so far (59 KiB), thank you all for the epic translation effort!
+* All translations of Decred Journal are linked on the [home page](https://xaur.github.io/decred-news/)
 * [Detailed analysis of Decred fork resistance](https://medium.com/decred/detailed-analysis-of-decred-fork-resistance-93022e0bcde7) by @Haon - [in Polish](https://github.com/artikozel/decred-articles/blob/master/Polish/into-polish/decredforkresistance.md) by @kozel
 * [How to Get Hired as a Decred Contractor](https://medium.com/decred/how-to-get-hired-as-a-decred-contractor-e1435842df10) by @Haon - [in Chinese](https://www.weibo.com/ttarticle/p/show?id=2309404315589245067163) by @guang
 
 Videos:
 
-* {}
+* On The Record w/ Murad Mahmudov - Bitcoin for 2019 on Tone Vays show ([youtube](https://www.youtube.com/watch?v=pjXzrAOhAPo), Decred explanation around 1h mark)
 
 Audio:
 
-* Free Talk Live 2018-10-27 Interview with Marco Peereboom of Decred at the Texas Bitcoin Conference https://soundcloud.com/freetalklive/free-talk-live-2018-10-27#t=40:50 _(missed in Oct issue)_
-* Episode 18: Murad Mahmudov on Bitcoin http://didyouknowcrypto.com/episode-18-murad-on-bitcoin/ {extract highlights}
+* Free Talk Live 2018-10-27 Interview with Marco Peereboom of Decred at the Texas Bitcoin Conference ([soundcloud](https://soundcloud.com/freetalklive/free-talk-live-2018-10-27#t=40:50), _missed in Oct issue_)
+* Unchained episode 100, Past Guests and Listeners Take Over the Show ([unchainedpodcast.co](http://unchainedpodcast.co/100th-episode-past-guests-and-listeners-take-over-the-show-ep100), @joshuam at 55:12)
+* Episode 18: Murad Mahmudov on Bitcoin ([didyouknowcrypto.com](http://didyouknowcrypto.com/episode-18-murad-on-bitcoin/)) {extract highlights}
 
 ## Community Discussions
 
