Add and fix translation links

--- a/journal/201812.md
+++ b/journal/201812.md
@@ -212,7 +212,7 @@ Selected articles:
 
 Translations:
 
-* Decred Journal - November 2018 [in Spanish](https://medium.com/@decred_es/bolet%C3%ADn-mensual-decred-noviembre-2018-52168692e624) by @elian, [in Polish](https://github.com/artikozel/DecredJournalPL/blob/master/journal/201811_DecredJournalPL.md) by @kozel and [in Russian](https://medium.com/decred-russia/decred-journal-%D0%BD%D0%BE%D1%8F%D0%B1%D1%80%D1%8C-2018-d0aceacfd72a) by @DZ, [in Chinese](https://medium.com/@guang.dcr/decred%E6%9C%88%E6%8A%A5-11%E6%9C%88-1ddac6598830) by @guang. November issue was the biggest so far (59 KiB), thank you all for the epic translation effort!
+* Decred Journal - November 2018 [in Spanish](https://medium.com/@decred_es/revista-decred-noviembre-2018-a3e52c5fc1a9) by @elian, [in Polish](https://github.com/artikozel/DecredJournalPL/blob/master/journal/201811_DecredJournalPL.md) by @kozel and [in Russian](https://medium.com/decred-russia/decred-journal-%D0%BD%D0%BE%D1%8F%D0%B1%D1%80%D1%8C-2018-d0aceacfd72a) by @DZ, [in Chinese](https://medium.com/@guang.dcr/decred%E6%9C%88%E6%8A%A5-11%E6%9C%88-1ddac6598830) by @guang. November issue was the biggest so far (59 KiB), thank you all for the epic translation effort!
 * All translations of Decred Journal are linked on the [home page](https://xaur.github.io/decred-news/)
 * [Detailed analysis of Decred fork resistance](https://medium.com/decred/detailed-analysis-of-decred-fork-resistance-93022e0bcde7) by @Haon - [in Polish](https://github.com/artikozel/decred-articles/blob/master/Polish/into-polish/decredforkresistance.md) by @kozel
 * [How to Get Hired as a Decred Contractor](https://medium.com/decred/how-to-get-hired-as-a-decred-contractor-e1435842df10) by @Haon - [in Chinese](https://www.weibo.com/ttarticle/p/show?id=2309404315589245067163) by @guang
@@ -298,6 +298,8 @@ The relevance and good news for Decred here is that a lot more developers are lo
 ## About This Issue
 
 This is the 9th issue of Decred Journal. It is available on [GitHub](https://xaur.github.io/decred-news/journal/201812). Past issues and translations are available [here](https://xaur.github.io/decred-news/).
+
+Chinese translation by @guang is available on [Medium](https://medium.com/@guang.dcr/decred%E6%9C%88%E6%8A%A5-12%E6%9C%88-eb8b42a5e4fd), [Weibo](https://www.weibo.com/ttarticle/p/show?id=2309404327424178422533) and [GitHub](https://github.com/Guang168/DecredCNJournal/blob/master/201812_DecredJournalCN.md).
 
 Most information from third parties is relayed directly from source after a minimal sanity check. The authors of Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
 
