--- a/journal/201812-short.md
+++ b/journal/201812-short.md
@@ -22,38 +22,15 @@ Decred is set for continued expansion and acceleration through 2019. Happy New Y
 
 In progress are admin [data backups](https://github.com/decred/politeia/issues/605) and two big changes to scale the server: [cache layer](https://github.com/decred/politeia/issues/546) and [websockets support](https://github.com/decred/politeia/issues/547).
 
-[dcrandroid](https://github.com/decred/dcrandroid): v1.0.0 release candidate 2 is available on Google Play for [mainnet](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.mainnet) and [testnet](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.testnet). Seed verification and seed restore interfaces were completely redone, several bugs fixed. The list of improvements can be found [on GitHub](https://github.com/decred/dcrandroid/tree/v1.0.0-rc2). Discussion and feedback [here](https://www.reddit.com/r/decred/comments/a846ch/decred_wallet_for_android_release_candidate/).
-
-Next RC to be released shortly will include several minor bug fixes as well as a better display of the status during initial sync which was requested by a handful of people.
-
-Focus has been on streamlining the setup experience for new users since that's the first thing they will see and can sometimes be tedious.
-
-Limitations of wallet encryption and risks of staking on insecure Android smartphones were discussed in [this chat](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$154533559847474ZIrlD:decred.org).
+[dcrandroid](https://github.com/decred/dcrandroid): v1.0.0 release candidate 2 is available on Google Play for [mainnet](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.mainnet) and [testnet](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.testnet). 
 
 [dcrios](https://github.com/raedahgroup/dcrios): has mostly just been syncing up with the changes from Android. iOS testing releases will be made available as soon as Android 1.0 is done.
 
 [dcrdata](https://github.com/decred/dcrdata): v3.1.1 is released on the [main site](https://explorer.dcrdata.org/). Highlights include new pages for [sidechains](https://explorer.dcrdata.org/side) and [disapproved blocks](https://explorer.dcrdata.org/rejects), major performance improvements, Go modules support, non-javascript mode [improvements](https://github.com/decred/dcrdata/pull/852) _(thanks from an anti-js dinosaur!)_. See full release notes [here](https://github.com/decred/dcrdata/releases/tag/v3.1.0). The release includes 129 commits from 4 months of work made by 16 code contributors. Congrats to dcrdata team!
 
-On master, a feature to download transactions for a single address [as a CSV](https://github.com/decred/dcrdata/pull/894) is finished. Several large refactors are merged to employ modern frontend best practices.
-
-Public dcrdata Tor service was temporarily shut down after a DDoS attack. After some [discussion](https://matrix.to/#/!YwropUjOvDAjfbVSzi:decred.org/$154480347443065mKiKp:decred.org) it was brought back at [dcrdata2opeenddl.onion](http://dcrdata2opeenddl.onion/).
-
-Developers can check the new [Docker image](https://github.com/decred/dcrdocker/pull/45) to build and test dcrdata and a new [FAQ page](https://github.com/decred/dcrdata/wiki/FAQ) on the wiki.
-
-[Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): [v0.7.0](https://github.com/matheusd/dcr-split-ticket-matcher/releases/tag/v0.7.0) and [v0.7.2](https://github.com/matheusd/dcr-split-ticket-matcher/releases/tag/v0.7.2) released. Highlights: SPV client support (read on the [privacy caveats](https://github.com/matheusd/dcr-split-ticket-matcher/releases/tag/v0.7.0)), better security with session token, OpenBSD support and better reporting. Find the downloads [on GitHub](https://github.com/matheusd/dcr-split-ticket-matcher/releases). Verify the signatures to make sure the binaries really come from @matheusd.
-
-[docs](https://github.com/decred/dcrdocs): building on redirection infrastructure laid out earlier, work began to [tidy up URLs](https://github.com/decred/dcrdocs/issues/659) and directory structure. Agenda Voting was [changed](https://github.com/decred/dcrdocs/pull/733) to Consensus Rules Voting. Translation framework was [removed](https://github.com/decred/dcrdocs/issues/736). Glossary was extended with new terms. Added new [guide for SPV](https://docs.decred.org/wallets/spv/). [Updated](https://github.com/decred/dcrdocs/pull/758) Politeia docs by grouping Politeia pages together, adding pages for [Proposal Guidelines](https://docs.decred.org/governance/politeia/proposal-guidelines/) page and [Example Proposal](https://docs.decred.org/governance/politeia/example-proposals/).
+[Ticket splitting](https://github.com/matheusd/dcr-split-ticket-matcher): [v0.7.0](https://github.com/matheusd/dcr-split-ticket-matcher/releases/tag/v0.7.0) and [v0.7.2](https://github.com/matheusd/dcr-split-ticket-matcher/releases/tag/v0.7.2) released. 
 
 [decred.org](https://github.com/decred/dcrweb): page headers were [changed](https://github.com/decred/dcrweb/pull/457) from javascript to videos, Rocket.Chat [removed](https://github.com/decred/dcrweb/pull/460) from the Community page, Decred Business Brief is now available as a [web page](https://decred.org/brief/) in addition to the PDF download.
-
-Other:
-
-* @matheusd proposed a proof of concept [offline tx signer](https://www.reddit.com/r/decred/comments/a3bfyi/raspberry_pi_offline_transaction_signer/) that allows one to sign transactions on a different machine (Raspberry Pi). [Let him know](https://www.reddit.com/r/decred/comments/a3bfyi/raspberry_pi_offline_transaction_signer/) if you would like to see this developed further.
-* [authit](https://authit.co/) is a proof of concept UI for timestamping files via [dcrtime](https://github.com/decred/dcrtime). [Source code](https://github.com/decred/authit) is now under decred organization, discussion is [here](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$154454253739832PpXgR:decred.org). Credits to @fernandoabolafio, @tiagoalvesdulce and @vctt.
-* @devwarrior is [working](https://github.com/xaur/decred-issues/issues/8#issuecomment-447220453) on a proof of concept UI for atomic swaps. Contact him [in chat](https://decred.slack.com/team/U6056C1NE) to collaborate and bring it to Decred.
-* Pull request adding [QTUM support](https://github.com/decred/atomicswap/pull/93) to atomicswap was submitted, feel free to join review and testing. An earlier [Ethereum support](https://github.com/decred/atomicswap/pull/76) pull request can also benefit from more eyeballs.
-* Decred command line tools can be built to run on Alpine Linux that uses [musl](https://www.musl-libc.org/) (cleaner implementation of libc), read [this chat](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$15457968071823GYapk:decred.org) for details.
-* Efforts to coordinate vital Decred article [translations](https://github.com/artikozel/decred-translations) are being undertaken to introduce a greater, non-English speaking user base to core Decred concepts.
 
 Dev activity stats for December: 230 active PRs, 196 master commits, 33K added and 106K deleted lines spread across 8 repositories. Contributions came from 3-9 developers per repository.
 
@@ -62,8 +39,6 @@ Dev activity stats for December: 230 active PRs, 196 master commits, 33K added a
 Welcome to new first time contributors: [aerth](https://github.com/decred/dcrwallet/commits?author=aerth) (dcrwallet), [@guang](https://github.com/decred/decrediton/commits?author=Guang168) (decrediton) and [tpkeeper](https://github.com/decred/politeia/commits?author=tpkeeper) (politeia).
 
 [30000fps](http://30000fps.com) has been a Decred design contributor since summer of 2018. One goal of his work has been about bringing illuminating development by finding meaningful ways to visualize and illustrate the processes and features otherwise unseen. Examples can be seen from the recent development visuals (upcoming [v1.4.0 release](https://user-images.githubusercontent.com/17774057/50576201-3e124e80-0e15-11e9-83cd-28b50cfd9357.gif) (4 MB), [Politeia release](https://twitter.com/decredproject/status/1052203697986363392), [v1.3.0 release](https://twitter.com/decredproject/status/1044693349205200896)), as well as the [overhaul](https://github.com/decred/dcrdesign/issues/27) of decred.org animated subpage headers.
-
-3 contributors were [removed](https://github.com/decred/dcrweb/pull/472) from the decred.org website.
 
 Several contractors shared their onboarding experiences [in this chat](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$154508806344819aIkBV:decred.org), which is a good, first-hand account to read in order to understand what the onboarding process might look like, particularly of note to those potentially interested in becoming Decred contractors. @richardred published an excellent [Working for the Decred DAE](https://medium.com/@richardred/working-for-the-decred-dae-a9cfb17686fa) post that describes his Decred journey in some detail.
 
@@ -74,21 +49,6 @@ Several independent contractors are preparing a community [roadmap document](htt
 In December the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 17,016 DCR and spent 12,570 DCR. Using December's daily average DCR/USD rate of $17.5, this is $298K received and $220K spent. As these payments were for work completed in November, it is also informative to consider them in the context of the November average daily rate of $32.5 - in which case the USD received/spent figures are $553K/$409K.
 
 Here are short proposal updates as of Jan 10. Please do not rely on them to form your opinion about the proposals and read the original texts and discussions on [Politeia](https://proposals.decred.org/).
-
-* [Open Source Research 2](https://proposals.decred.org/proposals/5d9cfb07aefb338ba1b74f97de16ee651beabc851c7f2b5f790bd88aea23b3cb): Politeia data research and Git contributor analysis are progressing, 4 new research ideas were posted in the proposal. Please comment and cast your comment votes to give research contributors a better feel for what is most useful.
-* [Stablecoin](https://proposals.decred.org/proposals/85fc65cef080cfc3564906fd3d488b827d74fc99bb29143ed8aa6c400b765be9) proposal was mostly criticized, author cancelled the proposal.
-* [Coffee Wallet integration](https://proposals.decred.org/proposals/45de9806c952c5ffc2fc6782fddbc74c852c26e3fb0e950144b92d75082c4731): the owner offered to reduce the requested amount but the community was generally not too excited about paying for integrations. Proposal was inactive for some time and marked as abandoned, the proposal owner later returned to [say](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$15467875879232uBQcG:decred.org) that they did not mean to abandon it.
-* Rejected proposals: [Radio ads](https://proposals.decred.org/proposals/7fe5d07a4ffff7dc6a83383018823d880b1c1db0a29305e74934817cf2b4e2ce) (69% No), [Decredex](https://proposals.decred.org/proposals/e78bc28631d0e682912e3ece25944481bf978b906ea44b1ed36470c0f48b27fc) (96% No), Bcash's [ATM integration](https://proposals.decred.org/proposals/bb7e19283d5c65fed598d5a2f4afcc2b5d2eab187b9cb84fc4304430f80b5ad1) (89% No); participation varied between 24-31% of tickets.
-* [Baeond](https://proposals.decred.org/proposals/f545b359fcf1b40b356e9cb556cb422cc7ff01b628b577f804cdc45ce414f5dd) futurepunk autonomous card game: discussions ongoing, author engaged in comments and chat and updated the proposal in response to feedback, many people are confused about how it will benefit Decred.
-* [Smart Reach partnership](https://proposals.decred.org/proposals/cf7143c93d35f886be03d749396e9202c7837a3d3cbbe876f93c3a7d18ec2028): discussions ongoing.
-
-[Bug bounty](https://proposals.decred.org/proposals/d33a2667469b56942adf42453def6cc2292325251e4cf791e806939ea9efc9e1) proposal was approved with 90% Yes and 30% participation. @degeri showed a great example of going through all the stages: join the community and demonstrate the ability to do useful work, identify something missing, draft an idea and put it through several rounds of feedback, submit a proposal, engage with commenters and adjust it further, and finally gain approval. A [notable fact](https://twitter.com/lukebp_/status/1078691610253250560) here is that Decred is one of the few projects where a pseudonymous contributor can build up trust and become successful by establishing a track record of delivering high quality work.
-
-To avoid common mistakes and build a successful proposal, make sure to read the new [Proposal Guidelines](https://docs.decred.org/governance/politeia/proposal-guidelines/) by @s_ben (inspired by an excellent [comment](https://proposals.decred.org/proposals/85fc65cef080cfc3564906fd3d488b827d74fc99bb29143ed8aa6c400b765be9/comments/2) by @nnnko56).
-
-Company 0 is not charging the Treasury for its privacy work, as clarified in [this thread](https://www.reddit.com/r/decred/comments/a6l00i/why_is_the_community_not_voting_on_implementing/).
-
-Discussions: [this chat](https://matrix.to/#/!lbzTjhzNbIaDbuAxkS:decred.org/$154502025444491kdLiq:decred.org) discusses staying frugal with the Treasury spending, especially during bad market conditions. [This thread](https://www.reddit.com/r/decred/comments/aa5jvn/any_updates_on_antonopouloss_veiw_of_decred/) dismantled common arguments against Decred's governance system: "we don't know if the governance system works because it hasn't failed yet" and "there hasn't been anything controversial yet". Turns out it's hard for controversy to build up in a system explicitly design to avoid it.
 
 A much more nuanced coverage of Politeia activity is provided by @richardred in Politeia Digest [issue 8](https://medium.com/politeia-digest/issue-8-dec-5-dec-11-2018-23bb061a08a0) and [issue 9](https://medium.com/politeia-digest/issue-9-dec-12-dec-31-2018-67b65b5bf30). The digest captures a lot of interesting details for every proposal. Issue 9 contains a review of 2018 Politeia data since its launch. You can find all past issues and leave feedback [here](https://github.com/RichardRed0x/politeia-digest).
 
