--- a/journal/201812-short.md
+++ b/journal/201812-short.md
@@ -8,29 +8,19 @@ Release candidates of core software v1.4.0 are available for download [on GitHub
 
 The [dcrandroid](https://github.com/decred/dcrandroid) wallet for Android OS also saw its first release candidates available on the [Google Play](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.mainnet). 
 
-Decred is set for continued expansion and acceleration through 2019. Happy New Year to all readers from the Decred Journal team!
-
-## Development
-
 [dcrd](https://github.com/decred/dcrd): v1.4.0 RC2 was released. This version includes the [smart fee estimator](https://github.com/decred/dcrd/pull/1434) that allows the user to either minimize mining delay or the fee, depending on needs. The [feature](https://github.com/decred/dcrd/issues/1412) is important for Lightning Network and as a general mechanism to handle network congestion.
 
 [Decrediton](https://github.com/decred/decrediton): v1.4.0 RC2 release features initial Trezor support, design improvements and bug fixes. More details in [release notes](https://github.com/decred/decred-binaries/releases/tag/v1.4.0-rc2).
-
-[Politeia](https://github.com/decred/politeia): latest [security tightening](https://github.com/decred/politeiagui/pull/935) earned Politeia an A+ rating from [securityheaders.com](https://securityheaders.com/?q=test-proposals.decred.org&followRedirects=on), which placed it in the site's top 3% and (briefly) in the Hall of Fame. 
 
 [dcrandroid](https://github.com/decred/dcrandroid): v1.0.0 release candidate 2 is available on Google Play for [mainnet](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.mainnet) and [testnet](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.testnet). 
 
 [dcrios](https://github.com/raedahgroup/dcrios): has mostly just been syncing up with the changes from Android. iOS testing releases will be made available as soon as Android 1.0 is done.
 
-[dcrdata](https://github.com/decred/dcrdata): v3.1.1 is released on the [main site](https://explorer.dcrdata.org/). Highlights include new pages for [sidechains](https://explorer.dcrdata.org/side) and [disapproved blocks](https://explorer.dcrdata.org/rejects), major performance improvements, Go modules support, non-javascript mode [improvements](https://github.com/decred/dcrdata/pull/852) Full release notes [here](https://github.com/decred/dcrdata/releases/tag/v3.1.0). 
+[dcrdata](https://github.com/decred/dcrdata): v3.1.1 is released on the [main site](https://explorer.dcrdata.org/). Full release notes [here](https://github.com/decred/dcrdata/releases/tag/v3.1.0). 
 
 Dev activity stats for December: 230 active PRs, 196 master commits, 33K added and 106K deleted lines spread across 8 repositories. Contributions came from 3-9 developers per repository.
 
-## People
-
 Welcome to new first time contributors: [aerth](https://github.com/decred/dcrwallet/commits?author=aerth) (dcrwallet), [@guang](https://github.com/decred/decrediton/commits?author=Guang168) (decrediton) and [tpkeeper](https://github.com/decred/politeia/commits?author=tpkeeper) (politeia).
-
-@richardred published an excellent [Working for the Decred DAE](https://medium.com/@richardred/working-for-the-decred-dae-a9cfb17686fa) post that describes his Decred journey in some detail.
 
 Several independent contractors are preparing a community [roadmap document](https://github.com/degeri/decred_independent_contractor_roadmap) where they outline their plans for 2019.
 
@@ -58,9 +48,6 @@ The hardware wallet company Ledger announced that the long-awaited DCR integrati
 
 Cobo Wallet [announced](https://twitter.com/cobo_wallet/status/1070805250376900609) a custodial staking service. Discussed [here](https://matrix.to/#/!kdpEDksmOMNrlMqffD:decred.org/$154413818735775gNTIq:decred.org).
 
-## Outreach
-
-> 
 > Ditto began Work on messaging, which can be viewed [here](https://docs.google.com/document/d/1BCah1EKLHpwgkvVcWRWJTRC68iWeGPdbGSrhEw35XhU/edit). Continued input is always valued. Concurrently, we're working with the design team to integrate new messaging into the site and to expand the content with new pages further explaining important aspects of Decred.
 > 
 > Messaging should be agreed upon in January, and a work will begin on the website. A plan including events and other tactics will also be published in January. (@Dustorf)
@@ -72,8 +59,6 @@ Trey [published](https://medium.com/decred/decred-and-ditto-in-2019-c9063a6bca06
 Mid-December @liz_bagot gave the inaugural Ditto [Bi-Weekly Update](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154482468943386bBAIp:decred.org), and later summarized the work for December.
 
 Now a total of 5 well-known community members have the rights to tweet via @decredproject Twitter account. You can read about how it works [here](https://medium.com/@richardred/working-for-the-decred-dae-a9cfb17686fa#bd70).
-
-## Events
 
 Decred held it's first meetup in New York City on Dec 5 at Distributed Global in the flatiron district in NYC. Details here.
 
@@ -106,13 +91,6 @@ Selected articles:
 * The practical cypherpunk: Marco Peereboom of Decred ([coinrivet.com](https://coinrivet.com/the-practical-cypherpunk-marco-peereboom-of-decred/))
 * Decred: Governance and Funding Reimagined ([51pct.io](https://51pct.io/decred-governance-and-funding-reimagined/))
 
-Translations:
-
-* Decred Journal - November 2018 [in Spanish](https://medium.com/@decred_es/bolet%C3%ADn-mensual-decred-noviembre-2018-52168692e624) by @elian, [in Polish](https://github.com/artikozel/DecredJournalPL/blob/master/journal/201811_DecredJournalPL.md) by @kozel and [in Russian](https://medium.com/decred-russia/decred-journal-%D0%BD%D0%BE%D1%8F%D0%B1%D1%80%D1%8C-2018-d0aceacfd72a) by @DZ, [in Chinese](https://medium.com/@guang.dcr/decred%E6%9C%88%E6%8A%A5-11%E6%9C%88-1ddac6598830) by @guang. November issue was the biggest so far (59 KiB), thank you all for the epic translation effort!
-* All translations of Decred Journal are linked on the [home page](https://xaur.github.io/decred-news/)
-* [Detailed analysis of Decred fork resistance](https://medium.com/decred/detailed-analysis-of-decred-fork-resistance-93022e0bcde7) by @Haon - [in Polish](https://github.com/artikozel/decred-articles/blob/master/Polish/into-polish/decredforkresistance.md) by @kozel
-* [How to Get Hired as a Decred Contractor](https://medium.com/decred/how-to-get-hired-as-a-decred-contractor-e1435842df10) by @Haon - [in Chinese](https://www.weibo.com/ttarticle/p/show?id=2309404315589245067163) by @guang
-
 Videos:
 
 * On The Record w/ Murad Mahmudov - Bitcoin for 2019 on Tone Vays show ([youtube](https://www.youtube.com/watch?v=pjXzrAOhAPo), Decred explanation around 1h mark)
@@ -126,6 +104,8 @@ Audio:
 ## Markets
 
 In December DCR was trading between USD 14.2-21.4 / BTC 0.0042-0.0058. The average daily rate was $17.5. A short price rise to USD 20.9 / BTC 0.0058 happened on volume increased to USD 5-6 million compared to USD 0.8-1.2 million on other days. Note that the trading volume data is not reliable, as noted below.
+
+Decred is set for continued expansion and acceleration through 2019. Happy New Year to all readers from the Decred Journal team!
 
 ## About This Issue
 
