--- a/journal/201812.md
+++ b/journal/201812.md
@@ -65,7 +65,7 @@ Other:
 * Decred command line tools can be built to run on Alpine Linux that uses [musl](https://www.musl-libc.org/) (cleaner implementation of libc), read [this chat](https://matrix.to/#/!HEeJkbPRpAqgAwhXWO:decred.org/$15457968071823GYapk:decred.org) for details.
 * Efforts to coordinate vital Decred article [translations](https://github.com/artikozel/decred-translations) are being undertaken to introduce a greater, non-English speaking user base to core Decred concepts.
 
-Dev activity stats for December: 230 active PRs, 196 master commits, 33K added and 106K deleted lines spread across 8 repositories. Contributions came from 3-9 developers per repository.
+Dev activity stats for December: 230 active PRs, 196 master commits, 33K added and 106K deleted lines spread across 8 repositories. Contributions came from 3-9 developers per repository. ([chart](https://twitter.com/decredproject/status/1083837111646781441))
 
 ## People
 
@@ -299,7 +299,7 @@ The relevance and good news for Decred here is that a lot more developers are lo
 
 This is the 9th issue of Decred Journal. It is available on [GitHub](https://xaur.github.io/decred-news/journal/201812). Past issues and translations are available [here](https://xaur.github.io/decred-news/).
 
-Chinese translation by @guang is available on [Medium](https://medium.com/@guang.dcr/decred%E6%9C%88%E6%8A%A5-12%E6%9C%88-eb8b42a5e4fd), [Weibo](https://www.weibo.com/ttarticle/p/show?id=2309404327424178422533) and [GitHub](https://github.com/Guang168/DecredCNJournal/blob/master/201812_DecredJournalCN.md).
+Chinese translation by @guang is available on [Medium](https://medium.com/@guang.dcr/decred%E6%9C%88%E6%8A%A5-12%E6%9C%88-eb8b42a5e4fd), [Weibo](https://www.weibo.com/ttarticle/p/show?id=2309404328163751677942) and [GitHub](https://github.com/Guang168/DecredCNJournal/blob/master/201812_DecredJournalCN.md).
 
 Most information from third parties is relayed directly from source after a minimal sanity check. The authors of Decred Journal have no ability to verify all claims. Please beware of scams and do your own research.
 
