--- a/journal/201901.md
+++ b/journal/201901.md
@@ -79,6 +79,8 @@ Independent Decred contractors [published](https://medium.com/decred/decred-inde
 
 Decred Bug Bounty program [launched](https://twitter.com/decredproject/status/1087486930093264897), congrats @degeri! Check the rules and guidelines on the new website [bounty.decred.org](https://bounty.decred.org/). Website is built with Hugo and the code is [on GitHub](https://github.com/decred/dcrbounty) so feel free to contribute. {anyone else to credit?}
 
+Intro blog post https://medium.com/decred/decred-launches-debug-decred-bug-bounty-program-7e4d2af27ec9
+
 @oregonisaac {@isaac?} is [looking](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$15474111512672Whvns:decred.org) for Java developers to evaluate requirements for ATM integration.
 
 Discussions:
@@ -192,6 +194,7 @@ Articles:
 * Decred coin review: Replacing BTC? (Dutch, [bitcoinsaltcoins.nl](https://www.bitcoinsaltcoins.nl/decred-coin-review-vervanger-van-btc/)) - Decred scored 8.8.
 * https://bitsonline.com/consensus-mechanism-of-decred-decentralization/
 * 3 Cryptocurrencies to HODL During This Crypto Winter (Opinion) by Daniel Frumkin ([investinblockchain.com](https://www.investinblockchain.com/cryptocurrencies-hodl-during-crypto-winter/))
+* https://seekingalpha.com/article/4235521-fundamental-value-crypto-bitcoin-decred-store-value-investments
 
 Above are most interesting articles, but more were published on the web. The [decred-media-tracker](https://github.com/RichardRed0x/decred-media-tracker) project is intended to track all articles.
 
@@ -260,9 +263,11 @@ ICO projects withdrew ~441k ETH from treasuries, which can impact the whole mark
 
 {ETH ProgPoW and governance news -- worthy?}
 
+Fundamentals of Proof of Work [article](https://blog.sia.tech/fundamentals-of-proof-of-work-beaa68093d2b) by David Vorick makes the case for exclusive hardware cryptocurrencies and contrasts them with shared hardware cryptocurrencies that suffer from multiple issues, especially ASIC-resistant ones. One of the issues with non specialized hardware is hashrate marketplaces. They allow hardware owners to better profit from their hardware by not caring about which coin they mine, even if the hashrate is rented to attackers. Decred benefits from specialized hardware but is not "exclusive" to it, other coins exist or may appear in future that use the same mining algorithm. What protects Decred is the (current) hashrate dominance for its algorithm and the ability to strip mining rewards from the blocks.
+
 {governance, forks, chain splits, controversy}
 
-Wassim Alsindi (@parallelind) published an extensive [research](https://hackernoon.com/towards-an-analytical-discipline-of-forkonomy-summer-2018-e6da993ee3f9) of cryptocurrency forks called "forkonomy".
+Updated version of the "forkonomy" research by Wassim Alsindi (@parallelind) was [published](https://hackernoon.com/towards-an-analytical-discipline-of-forkonomy-summer-2018-e6da993ee3f9) along with an up-to-date [follow-up](https://medium.com/@parallelind/forkonomy-revisited-where-are-they-now-73fbfbec6b4d).
 
 Hcash forked a few [more](https://archive.today/rEhWX) Decred projects: [Autonomy](https://archive.today/KTCdX) (Politeia), [hcexplorer](https://archive.today/2KTtW) and [hctime](https://archive.today/K151A). In Politeia, they accidently [removed](https://archive.today/ECplt) copyright of Decred developers and forgot to rename the project. After being notified they quickly reacted by removing multiple repositories from TKFORKED account,  [reinstating](https://github.com/TKFORKED/autonomy/commit/4b05c2c31829df64be69e546d939a563247e1927) the license and [renaming](https://github.com/TKFORKED/autonomy/commit/98d5f63f676e45e6a91eba99da3db985effdb1f2) the Politeia fork to Autonomy. A few [missed](https://twitter.com/michae2xl/status/1084270468234915840) subtle Decred icons were fixed. Some [projects](https://archive.today/https://github.com/HcashOrg/hc*) were forked with their commit history erased and without marking them as forks on GitHub. Complaints on their subreddit were silently censored without reply ([1](https://www.reddit.com/r/hcash/comments/adwmx2/hcash_being_shady_again/), [2](https://www.reddit.com/r/hcash/comments/afepsc/hcash_cant_be_bothered_to_change_the_decred_logo/). Discussed [here](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$154696507010921TRgid:decred.org).
 
