--- a/journal/201901.md
+++ b/journal/201901.md
@@ -181,7 +181,7 @@ The good news, is it [can mean](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.o
 
 Articles:
 
-* Understanding Decred Governance ([in Chinese](https://mp.weixin.qq.com/s/z3hzILiPBsLJR72Q2tP7TQ) at qq.com, [Google translation](https://translate.google.com/translate?sl=auto&tl=en&hl=en&u=https%3A%2F%2Fmp.weixin.qq.com%2Fs%2Fz3hzILiPBsLJR72Q2tP7TQ), _missed in Dec issue_) {get English for author's name}
+* Understanding Decred Governance ([in Chinese](https://mp.weixin.qq.com/s/z3hzILiPBsLJR72Q2tP7TQ) at qq.com, [Google translation](https://translate.google.com/translate?sl=auto&tl=en&hl=en&u=https%3A%2F%2Fmp.weixin.qq.com%2Fs%2Fz3hzILiPBsLJR72Q2tP7TQ), _missed in Dec issue_) by "Dr Bitcoin"
 * https://www.coindesk.com/how-to-last-the-crypto-winter-seek-simplicity-manage-complexity (notably, the tagline was collectively brainstormed in #marketing)
 * https://bithub.pl/wywiady/decred-wywiad-z-community-managerem/ {en title please}
 * https://cryptoinsider.com/decred-dcr-prioritizes-blockchain-based-governance-and-decentralized-decision-making/ {worthy?}
@@ -189,12 +189,13 @@ Articles:
 * https://www.coinbureau.com/analysis/best-decred-wallets/
 * https://www.forbes.com/sites/leslieankney/2019/01/11/who-should-hold-power-decred-governance-and-what-it-means-for-investors/
 * https://medium.com/decred/decred-independent-contractor-roadmap-884faba3db39
-* https://mp.weixin.qq.com/s/_-lY0rtWSPiyLPZeTRR7gg (Chinese, {good?} {author name or nick?})
+* https://mp.weixin.qq.com/s/_-lY0rtWSPiyLPZeTRR7gg (Chinese, {good?} by yinguochao})
 * Blockchain Project Review: Decred:8.4 Autonomous Digital Currency by Evaluape ([medium](https://medium.com/@EVALUAPE1/blockchain-project-review-decred-8-4-autonomous-digital-currency-323771d65529)) - Decred rated 8.4
 * Decred coin review: Replacing BTC? (Dutch, [bitcoinsaltcoins.nl](https://www.bitcoinsaltcoins.nl/decred-coin-review-vervanger-van-btc/)) - Decred scored 8.8.
 * https://bitsonline.com/consensus-mechanism-of-decred-decentralization/
 * 3 Cryptocurrencies to HODL During This Crypto Winter (Opinion) by Daniel Frumkin ([investinblockchain.com](https://www.investinblockchain.com/cryptocurrencies-hodl-during-crypto-winter/))
 * https://seekingalpha.com/article/4235521-fundamental-value-crypto-bitcoin-decred-store-value-investments
+* Binance info listed a new rating report([EN](https://info.binance.com/en/rate/detail/2506),[CN](https://info.binance.com/cn/rate/detail/2493)) of Decred by [Evaluape](https://www.evaluape.io/project/browse/54155/report)
 
 Above are most interesting articles, but more were published on the web. The [decred-media-tracker](https://github.com/RichardRed0x/decred-media-tracker) project is intended to track all articles.
 
