--- a/journal/201812-short.md
+++ b/journal/201812-short.md
@@ -2,29 +2,24 @@
 
 ![Decred Journal - December 2018](../img/journal-201812-384.jpg "Decred Journal - December 2018")
 
-December was a month of considerable progress. Politeia approved proposals are gaining momentum, with Ditto personnel joining the comms channels to work on messaging and plans for 2019 with the broader community.
+December was a month of considerable progress, with developer activity, as always, in full swing. Politeia approved proposals are also gaining momentum, with Ditto personnel joining the comms channels to work on messaging and plans for 2019 with the broader community. The high points for the month in Decred:
 
-Release candidates of core software v1.4.0 are available for download [on GitHub](https://github.com/decred/decred-binaries/releases/tag/v1.4.0-rc2). Enthusiasts are invited to try them while regular users are advised to wait for the final release. 
+Release candidates of core software v1.4.0 are available for download [on GitHub](https://github.com/decred/decred-binaries/releases/tag/v1.4.0-rc2). This software includes a smart fee estimator, a critical element to support Lightning Network. s](https://github.com/decred/decred-binaries/releases/tag/v1.4.0-rc2).
 
-The [dcrandroid](https://github.com/decred/dcrandroid) wallet for Android OS also saw its first release candidates available on the [Google Play](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.mainnet). 
+Mobile wallet progress is robust, with the release of Android  and testing for iOS. [dcrandroid](https://github.com/decred/dcrandroid): v1.0.0 release candidate 2 is available on Google Play for [mainnet](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.mainnet) and [testnet](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.testnet). (https://github.com/raedahgroup/dcrios) 
 
-[dcrd](https://github.com/decred/dcrd): v1.4.0 RC2 was released. This version includes the [smart fee estimator](https://github.com/decred/dcrd/pull/1434) that allows the user to either minimize mining delay or the fee, depending on needs. The [feature](https://github.com/decred/dcrd/issues/1412) is important for Lightning Network and as a general mechanism to handle network congestion.
+Ditto began PR work in earnest. Trey [published](https://medium.com/decred/decred-and-ditto-in-2019-c9063a6bca06) Ditto's big picture look at 2019 and the strategy for Decred. Following that a [survey](https://www.reddit.com/r/decred/comments/a7cul1/decred_and_ditto_in_2019_share_your_ideas/) was held on Reddit asking for community input on marketing. jy-p and Dustorf traveled to NYC to onboard Ditto and hold Decred's first NYC Meetup, and work has already begun on messaging.
 
-[Decrediton](https://github.com/decred/decrediton): v1.4.0 RC2 release features initial Trezor support, design improvements and bug fixes. More details in [release notes](https://github.com/decred/decred-binaries/releases/tag/v1.4.0-rc2).
+Decred held major events in NYC, Mexico City, and Toronto, and will attend events in the coming months in Taipei, Singapore, Warsaw, Miami, Atlanta, Rio De Janiero, and Guadalajara. More details here.
 
-[dcrandroid](https://github.com/decred/dcrandroid): v1.0.0 release candidate 2 is available on Google Play for [mainnet](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.mainnet) and [testnet](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.testnet). 
+December marked the major integrations of hardware wallet companies Ledger and Cobo. Decred is now available on Ledger Live and marks the first native Ledger Live integration since its launch. Read more [here](https://www.ledger.fr/2018/12/11/ledger-nano-s-ledger-blue-and-ledger-live-now-support-decred-transactions/) ([@LedgerHQ](https://twitter.com/LedgerHQ/status/1072446149863329792))
 
-[dcrios](https://github.com/raedahgroup/dcrios): has mostly just been syncing up with the changes from Android. iOS testing releases will be made available as soon as Android 1.0 is done.
-
-[dcrdata](https://github.com/decred/dcrdata): v3.1.1 is released on the [main site](https://explorer.dcrdata.org/). Full release notes [here](https://github.com/decred/dcrdata/releases/tag/v3.1.0). 
 
 Dev activity stats for December: 230 active PRs, 196 master commits, 33K added and 106K deleted lines spread across 8 repositories. Contributions came from 3-9 developers per repository.
 
-Welcome to new first time contributors: [aerth](https://github.com/decred/dcrwallet/commits?author=aerth) (dcrwallet), [@guang](https://github.com/decred/decrediton/commits?author=Guang168) (decrediton) and [tpkeeper](https://github.com/decred/politeia/commits?author=tpkeeper) (politeia).
 
 Several independent contractors are preparing a community [roadmap document](https://github.com/degeri/decred_independent_contractor_roadmap) where they outline their plans for 2019.
 
-## Governance
 
 In December the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 17,016 DCR and spent 12,570 DCR. Using December's daily average DCR/USD rate of $17.5, this is $298K received and $220K spent. As these payments were for work completed in November, it is also informative to consider them in the context of the November average daily rate of $32.5 - in which case the USD received/spent figures are $553K/$409K.
 
@@ -40,45 +35,6 @@ Staking: 30-day average ticket price was 103 DCR (+0) per dcrstats.com. The pric
 
 Nodes: As of Jan 1 there were 192 public listening nodes and 253 normal ones per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: 1.5% are v1.5.0(pre) dev builds, 1.8% on v1.4.0(rc1), 5.3% on v1.4.0(pre) (-1.2%), 55% on v1.3.0 (+5%), 20% on v1.2.0 (-5%), 10% on v1.1.2 (-1%), 4% on v1.1.0 (-1%).
 
-## Integrations
-
-The hardware wallet company Ledger announced that the long-awaited DCR integration is complete:
-
-> We are excited to announce that the Ledger Nano S and Ledger Blue are now compatible with Decred. Decred is now available on Ledger Live and marks the first native Ledger Live integration since its launch. Read more [here](https://www.ledger.fr/2018/12/11/ledger-nano-s-ledger-blue-and-ledger-live-now-support-decred-transactions/) ([@LedgerHQ](https://twitter.com/LedgerHQ/status/1072446149863329792))
-
-Cobo Wallet [announced](https://twitter.com/cobo_wallet/status/1070805250376900609) a custodial staking service. Discussed [here](https://matrix.to/#/!kdpEDksmOMNrlMqffD:decred.org/$154413818735775gNTIq:decred.org).
-
-> Ditto began Work on messaging, which can be viewed [here](https://docs.google.com/document/d/1BCah1EKLHpwgkvVcWRWJTRC68iWeGPdbGSrhEw35XhU/edit). Continued input is always valued. Concurrently, we're working with the design team to integrate new messaging into the site and to expand the content with new pages further explaining important aspects of Decred.
-> 
-> Messaging should be agreed upon in January, and a work will begin on the website. A plan including events and other tactics will also be published in January. (@Dustorf)
-
-@Dustorf, @jy-p and Ditto met in New York and posted a report [in chat](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154413732235771XIVBH:decred.org). 
-
-Trey [published](https://medium.com/decred/decred-and-ditto-in-2019-c9063a6bca06) Ditto's big picture look at 2019 and the strategy for Decred. Following that a [survey](https://www.reddit.com/r/decred/comments/a7cul1/decred_and_ditto_in_2019_share_your_ideas/) was held on Reddit asking the community how would they describe Decred, what media do they read and how they think Decred should target developers.
-
-Mid-December @liz_bagot gave the inaugural Ditto [Bi-Weekly Update](https://matrix.to/#/!OfChXgczrIlpEZSFAv:decred.org/$154482468943386bBAIp:decred.org), and later summarized the work for December.
-
-Now a total of 5 well-known community members have the rights to tweet via @decredproject Twitter account. You can read about how it works [here](https://medium.com/@richardred/working-for-the-decred-dae-a9cfb17686fa#bd70).
-
-Decred held it's first meetup in New York City on Dec 5 at Distributed Global in the flatiron district in NYC. Details here.
-
-Other attended events:
-
-* Presentation in Technology University in Amozoc, Mexico. Details here.
-
-* [Introduction to Decred](https://cryptocanucks.com/events/an-introduction-to-decred-toronto/) in Toronto, Canada. @michae2xl and @zubairzia0 hosted the event.
-
-Upcoming:
-
-* [OKEx Taiwan MeetUp](https://www.eventbrite.hk/e/okex-global-meetup-tour-2019-taiwan-tickets-54689867867) in Taipei, Taiwan on Jan 17. 
-* [Binance Blockchain Week](https://www.binancefair.com/) in Singapore on Jan 21-22. @guang will attend and represent Decred.
-* [10 lat Bitcoina](https://10latbitcoina.com.pl/) in Warsaw, Poland on Jan 26. @karamble will deliver a presentation at the conference celebrating the 10th anniversary of the Bitcoin whitepaper and Bitcoin itself. Decred specifics are to be announced.
-* [TabConf](https://tabconf.com/) in Atlanta, USA on Feb 8-10. @moo31337 will present "Decred 101: An introduction to Decred" on Feb 9.
-* [The North American Bitcoin Conference](https://btcmiami.com/) in Miami, USA on Jan 16-18. @jy-p will present Politeia and explore a wide variety of applications that could utilize it. 
-* [Campus Party](http://brasil.campus-party.org/cpbr12/patrocinadores/) in Sao Paulo, Brazil on Feb 12-17. Decred will have speakers and a dedicated area for hackathons.
-* [Jalisco Talent Land](https://www.talent-land.mx/#entradas) in Guadalajara, Mexico on Apr 22-26. Decred will have a booth. @elian will present an overview of Decred with Q&A, plus there will be walkthroughs how to use software and vote. Contact @elian if you're interested in helping/attending.
-
-Ask in [#event_planning](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org) room for any questions.
 
 ## Media
 
